Finshed adding comments and personal information...puppy pictures

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 </head>
 <body>
 
-    <!-- Nav bar -->
+    <!-- Bootstrap Nav bar -->
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><span class="bg-info">Tim Martin</span></a>
+            <!-- Header -->
+            <a class="navbar-brand" href="#"><span class="bg-secondary">Tim Martin</span></a>
+            <!-- Toggler button for when page gets small-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Navigation list -->
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav d-flex ml-auto">
                     <li class="nav-item">
@@ -49,7 +52,7 @@
     <!-- Grid style -->
     <main class="container">
         <article class="row">
-            <div class="col-md-8 card-style">
+            <div class="col-md-8 col-xl-10 card-style">
                 <!-- Card Header -->
                 <div class="col-md-12">
                     <!-- Title -->
@@ -57,13 +60,11 @@
                     <section class="row">
                         <div class="col-md-12">
                             <!-- Picture -->
-                            <img class="about-me" src="https://via.placeholder.com/200" alt="Your Name">
+                            <img class="about-me" src="assets/images/IMG_3268.JPG" alt="Lounging on the couch">
                             <!-- Information -->
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim illo dolores nisi quasi, magnam a cupiditate nostrum praesentium architecto sequi, soluta quae quia quos? Repellat consequuntur earum sed eveniet ratione!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            <p>Hi, my name is Tim Martin.  I grew up in Eden Prairie, MN.  I have a Bachelor of Science degree in Applied Computer Science from St. Cloud State University. For the last 15 years, I have risen through the ranks in the airline industry as a Software Engineer specializing in C++.  My keen eye for detail got me my last job because during the interview, when my future boss asked me if I was detail oriented, I said, "Oh yeah, I am quite anal when it comes to that stuff." (It is a good trait for a programmer so zip it.)
                             </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim illo dolores nisi quasi, magnam a cupiditate nostrum praesentium architecto sequi, soluta quae quia quos? Repellat consequuntur earum sed eveniet ratione!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            <p>Now for the fun stuff.  I am overly sarcastic, so much so that if I really want, you can't tell if I am being sarcastic, or if I am just being an ass.  I am a huge Star Wars nerd and I completely geeked out during the season finale of Season 2 of The Mandalorian.  I enjoy hanging out with my wife and daughter, traveling, listening to music when I code (mostly rock, or classical mixed with techno), and playing with my dog, Buster.  Speaking of Buster, you might want to click on my portfolio because... PUPPY PICTURES!
                             </p>
                         </div> 
                     </section>
@@ -72,24 +73,24 @@
         </article>
     </main>
 
-    <!-- Extra row so footer doesn't overlap content -->
     <!-- <div class="row extra"></div> -->
     <!-- Footer -->
     <footer>
-        <div class="row">
+        <!-- Ribbon on top -->
+        <section class="row">
             <div class="col-md-12 ribbon">
 
             </div>
-        </div> 
-        
-        <div class="row">
+        </section> 
+        <!-- Main footer -->
+        <section class="row">
             <div class="col-md-12">
                 <p>
                     &copy; Copyright 2020 Tim Martin
                 </p>
             </div>
             
-        </div>
+        </section>
     </footer>
 </body>
 </html>
