--- a/contact.html
+++ b/contact.html
@@ -15,23 +15,26 @@
     <link rel="stylesheet" href="assets/css/style.css">    
 </head>
 <body>
-    <!-- Nav bar -->
+    <!-- Bootstrap Nav bar -->
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><span class="bg-info">Tim Martin</span></a>
+            <!-- Header -->
+            <a class="navbar-brand" href="#"><span class="bg-secondary">Tim Martin</span></a>
+            <!-- Toggler button for when page gets small-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Navigation list -->
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav d-flex ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                     </li>
                 </ul>
             </nav>
@@ -48,22 +51,27 @@
                     <h1 class="my-title">Contact</h1>
                     <section class="row justify-content-between">
                         <div class="col-md-12">
+                            <!-- Form for contacting me -->
                             <form>
-                                <div class="mb-3 col-md-10">
+                                <!-- Name text box -->
+                                <section class="mb-3 col-md-10">
                                     <label for="contact-name" class="form-label">Name</label>
                                     <input type="text" class="form-control" id="name" placeholder="Name">
-                                </div>
-                                <div class="mb-3 col-md-10">
+                                </section>
+                                <!-- Email text box -->
+                                <section class="mb-3 col-md-10">
                                     <label for="contact-email" class="form-label">Email</label>
                                     <input type="text" class="form-control" id="email" placeholder="Email">
-                                </div>
-                                <div class="mb-3 col-md-10">
+                                </section>
+                                <!-- Message text box -->
+                                <section class="mb-3 col-md-10">
                                     <label for="contact-message" class="form-label">Message</label>
                                     <textarea class="form-control" id="message" rows="3" placeholder="Message"></textarea>
-                                </div>
-                                <div class="mb-3">
+                                </section>
+                                <!-- Submit button -->
+                                <section class="mb-3">
                                     <button type="submit" >Submit</button>
-                                </div>
+                                </section>
                             </form>    
                         </div>
                     </section>
@@ -72,21 +80,24 @@
         </article>
     </main>
 
+    <!-- <div class="row extra"></div> -->
+    <!-- Footer -->
     <footer>
-        <div class="row">
+        <!-- Ribbon on top -->
+        <section class="row">
             <div class="col-md-12 ribbon">
 
             </div>
-        </div> 
-        
-        <div class="row">
+        </section> 
+        <!-- Main footer -->
+        <section class="row">
             <div class="col-md-12">
                 <p>
                     &copy; Copyright 2020 Tim Martin
                 </p>
             </div>
             
-        </div>
+        </section>
     </footer>
 
 </body>
