--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <!-- Bootstrap Nav bar -->
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navbar navbar-expand-lg navbar-dark bkgd-color">
         <div class="container-fluid">
             <!-- Header -->
-            <a class="navbar-brand" href="#"><span class="bg-secondary">Tim Martin</span></a>
+            <a class="navbar-brand" href="#"><span class="text-color">Tim Martin</span></a>
             <!-- Toggler button for when page gets small-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav d-flex ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -44,9 +44,9 @@
    <!-- Grid style -->
     <main class="container">
         <article class="row">
-            <div class="col-lg-8 col-md-8 card-style">
+            <div class="col-lg-8 col-md-8 card-style bkgd-color">
                 <!-- Card Header -->
-                <div class="col-md-12">
+                <div class="col-md-12 text-color">
                     <!-- Title -->
                     <h1 class="my-title">Contact</h1>
                     <section class="row justify-content-between">
