--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <!-- Bootstrap Nav bar -->
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navbar navbar-expand-lg navbar-dark bkgd-color">
         <div class="container-fluid">
             <!-- Header -->
-            <a class="navbar-brand" href="#"><span class="bg-secondary">Tim Martin</span></a>
+            <a class="navbar-brand" href="#"><span class="text-color">Tim Martin</span></a>
             <!-- Toggler button for when page gets small-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav d-flex ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
                     </li>
                 </ul>
             </nav>
@@ -44,35 +44,43 @@
    <!-- Grid style -->
     <main class="container">
         <article class="row">
-            <div class="col-lg-8 col-md-8 card-style">
+            <div class="col-lg-12 col-md-12 card-style bkgd-color">
                 <!-- Card Header -->
-                <div class="col-md-12">
+                <div class="col-md-12 text-color">
                     <!-- Title -->
                     <h1 class="my-title">Portfolio</h1>
                     <secion class="row justify-content-between">
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 1, Column 1 -->
-                            <img class="portfolio" src="assets/images/sleepy_Buster.jpg" alt="Buster napping">
+                            <h2 class="project-title">movieIQ🎬</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://nickstull.github.io/Movie-Guessing-Game/index.html" target="_blank">https://nickstull.github.io/Movie-Guessing-Game/index.html</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/NickStull/Movie-Guessing-Game" target="_blank">https://github.com/NickStull/Movie-Guessing-Game</a></h6>
+                            <img class="portfolio" src="./assets/images/movieIQ_home.jpg" alt="movieIQ trivia game">
+                            <!-- <img class="portfolio" src="assets/images/sleepy_Buster.jpg" alt="Buster napping"> -->
                         </div>
                         
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 1, Column 2 -->
-                            <img class="portfolio" src="assets/images/happy_Buster.jpg" alt="Buster smiling for the camera">
+                            <h2 class="project-title">Day Planner</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/day_planner/" target="_blank">https://timmartin13.github.io/day_planner/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/day_planner" target="_blank">https://github.com/TimMartin13/day_planner</a></h6>
+                            <img class="portfolio" src="./assets/images/day_planner.jpg" alt="Day planner">
                         </div>
 
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 2, Column 1 -->
-                            <img class="portfolio" src="assets/images/christmas_Buster.jpg" alt="Buster hanging out on the couch">
+                            <h2 class="project-title">Weather Dashboard</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/weather_dashboard/" target="_blank">https://timmartin13.github.io/weather_dashboard/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/weather_dashboard" target="_blank">https://github.com/TimMartin13/weather_dashboard</a></h6>
+                            <img class="portfolio" src="./assets/images/weather_dashboard.jpg" alt="Weather dashboard">
                         </div>
                         
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 2, Column 2 -->
-                            <img class="portfolio" src="assets/images/bosu_Buster.jpg" alt="Buster laying next to his Bosu Ball">
-                        </div>
-
-                        <div class="col-lg-6 col-md-12">
-                            <!-- Row 3, Column 1 -->
-                            <img class="portfolio" src="assets/images/playful_Buster.jpg" alt="Buster playing with a ball">
+                            <h2 class="project-title">Password Generator</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/password_generator/" target="_blank">https://timmartin13.github.io/password_generator/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/password_generator" target="_blank">https://github.com/TimMartin13/password_generator</a></h6>
+                            <img class="portfolio" src="./assets/images/password_generator.jpg" alt="Password generator">
                         </div>
                     </secion>
                 </div>  
