Updating readme and screen shots

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,12 +99,16 @@
         </section> 
         <!-- Main footer -->
         <section class="row">
-            <div class="col-md-12">
+            <div class="col-sm-6">
                 <p>
-                    &copy; Copyright 2020 Tim Martin
+                    &copy; Copyright 2021 Tim Martin
                 </p>
             </div>
-            
+            <div class="col-sm-6 contact">
+                <h6> Phone: (612) 799-1450</h6>
+                <h6> Email: timmartin13@gmail.com</h6>
+                
+            </div>       
         </section>
     </footer>
 
