Added a few more projects and added icons to my contact info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
     <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    
+    <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 <body>
 
@@ -52,7 +52,7 @@
     <!-- Grid style -->
     <main class="container-fluid main-content">
         <article class="row center">
-            <div class="col-md-7 card-style bkgd-color">
+            <div class="col-md-7 card-style bkgd-color opacity">
                 <!-- Card Header -->
                 <div class="col-md-12 ">
                     <!-- Title -->
@@ -79,15 +79,15 @@
                         <div class="col-md-12 info">
                             <!-- Information -->
                             <div class="card bkgd-color">
-                                <div class="card-body bkgd-color text-color">
+                                <div class="card-body text-color">
                                     <h4 class="card-title text-color">Tim Martin</h4>
                                     <h6 class="card-subtitle mb-2 text-muted">Full Stack Developer</h6>
                                     <div class="contact-info">
-                                        <p class="card-p">Phone: 612.799.1450</p>
-                                        <p class="card-p">Email: timmartin13@gmail.com</p>
-                                        <p class="card-p">Github: <a class="card-a" href="https://github.com/TimMartin13" target="_blank">github.com/TimMartin13</a></p>
-                                        <p class="card-p">LinkedIn: <a class="card-a" href="https://www.linkedin.com/in/tim-martin13/" target="_blank">linkedin.com/in/tim-martin13/</a></p>
-                                        <p class="card-p">Resume: <a class="card-a" href="./assets/images/TimMartinResume.pdf" download>&emsp;.pdf</a><a class="card-a" href="./assets/images/TimMartinResume.docx" download>&emsp;&emsp;.docx</a></p>
+                                        <p class="card-p">&nbsp;<i class="fas fa-mobile-alt"></i>&nbsp;&nbsp;&nbsp;: 612.799.1450</p>
+                                        <p class="card-p"><i class="far fa-envelope"></i>&nbsp;&nbsp;: timmartin13@gmail.com</p>
+                                        <p class="card-p"><i class="fab fa-github"></i>&nbsp;&nbsp;: <a class="card-a" href="https://github.com/TimMartin13" target="_blank">github.com/TimMartin13</a></p>
+                                        <p class="card-p"><i class="fab fa-linkedin-in"></i>&nbsp;&nbsp;: <a class="card-a" href="https://www.linkedin.com/in/tim-martin13/" target="_blank">linkedin.com/in/tim-martin13/</a></p>
+                                        <p class="card-p">Resume: <a class="card-a" href="./assets/images/TimMartinResume.pdf" target="_blank">&emsp;.pdf</a><a class="card-a" href="./assets/images/TimMartinResume.docx" target="_blank">&emsp;&emsp;.docx</a></p>
                                     </div>
                                 </div>
                               </div>
