--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     </header>
 
    <!-- Grid style -->
-    <main class="container">
+    <main class="container col-lg-10">
         <article class="row">
             <div class="col-lg-12 col-md-12 card-style bkgd-color">
                 <!-- Card Header -->
@@ -69,6 +69,22 @@
 
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 2, Column 1 -->
+                            <h2 class="project-title">Horse Manager</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://whispering-inlet-04022.herokuapp.com/" target="_blank">https://whispering-inlet-04022.herokuapp.com/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/NickStull/barn-manager-app" target="_blank">https://github.com/NickStull/barn-manager-app</a></h6>
+                            <img class="portfolio" src="./assets/images/loginPage.png" alt="Horse Manager">
+                        </div>
+
+                        <div class="col-lg-6 col-md-12">
+                            <!-- Row 2, Column 2 -->
+                            <h2 class="project-title">Eat-Da-Burger</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://calm-chamber-62526.herokuapp.com/" target="_blank">https://calm-chamber-62526.herokuapp.com/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/burger" target="_blank">https://github.com/TimMartin13/burger</a></h6>
+                            <img class="portfolio" src="./assets/images/lists.jpg" alt="Eat-Da-Burger">
+                        </div>
+
+                        <div class="col-lg-6 col-md-12">
+                            <!-- Row 3, Column 1 -->
                             <h2 class="project-title">Weather Dashboard</h2>
                             <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/weather_dashboard/" target="_blank">https://timmartin13.github.io/weather_dashboard/</a></h6>
                             <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/weather_dashboard" target="_blank">https://github.com/TimMartin13/weather_dashboard</a></h6>
@@ -76,11 +92,19 @@
                         </div>
                         
                         <div class="col-lg-6 col-md-12">
-                            <!-- Row 2, Column 2 -->
+                            <!-- Row 3, Column 2 -->
                             <h2 class="project-title">Password Generator</h2>
                             <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/password_generator/" target="_blank">https://timmartin13.github.io/password_generator/</a></h6>
                             <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/password_generator" target="_blank">https://github.com/TimMartin13/password_generator</a></h6>
                             <img class="portfolio" src="./assets/images/password_generator.jpg" alt="Password generator">
+                        </div>
+
+                        <div class="col-lg-6 col-md-12">
+                            <!-- Row 4, Column 1 -->
+                            <h2 class="project-title">Note Taker</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://fathomless-dusk-84204.herokuapp.com/" target="_blank">https://fathomless-dusk-84204.herokuapp.com/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/note-taker" target="_blank">https://github.com/TimMartin13/note-taker</a></h6>
+                            <img class="portfolio" src="./assets/images/notesPage.jpg" alt="Note taker">
                         </div>
                     </secion>
                 </div>  
