added The Featured Edge

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,14 @@
 
                         <div class="col-lg-6 col-md-12">
                             <!-- Row 1, Column 1 -->
+                            <h2 class="project-title">The Featured Edge</h2>
+                            <h6>Deployed at: <a class="card-a" href="https://featured-edge.herokuapp.com/" target="_blank">https://featured-edge.herokuapp.com/</a></h6>
+                            <h6>Repository: <a class="card-a" href="https://github.com/NickStull/maker-spotlight" target="_blank">https://github.com/NickStull/maker-spotlight</a></h6>
+                            <img class="portfolio" src="./assets/images/featuredEdge.jpg" alt="Featured Edge homepage">
+                        </div>
+
+                        <div class="col-lg-6 col-md-12">
+                            <!-- Row 1, Column 1 -->
                             <h2 class="project-title">Employee Directory</h2>
                             <h6>Deployed at: <a class="card-a" href="https://timmartin13.github.io/employee-directory/" target="_blank">https://timmartin13.github.io/employee-directory/</a></h6>
                             <h6>Repository: <a class="card-a" href="https://github.com/TimMartin13/employee-directory" target="_blank">https://github.com/TimMartin13/employee-directory</a></h6>
