--- a/portfolio_postIt.html
+++ b/portfolio_postIt.html
@@ -48,6 +48,21 @@
     
     <main class="container col-lg-12">
         <ul class="notes-list">
+
+            <li class="note">
+                <section href="#">
+                    <h2>The Featured Edge</h2>
+                    <div class="row links">
+                        <div class="col-6">
+                            <h6><a href="https://featured-edge.herokuapp.com/" target="_blank">Deployed link</a></h6>
+                        </div>
+                        <div class="col-6">
+                            <h6 class="left"><a href="https://github.com/NickStull/maker-spotlight" target="_blank">Repository link</a></h6>
+                        </div>
+                    </div>
+                    <img class="portfolio" src="./assets/images/featuredEdge.jpg" alt="Featured Edge homepage">
+                </section>
+            </li>
             
             <li class="note">
                 <section href="#">
